--- a/03_setup_k8s_platform/vars/webgis_postgis.yml
+++ b/03_setup_k8s_platform/vars/webgis_postgis.yml
@@ -2,7 +2,7 @@
 # file: 03_setup_k8s_platform/vars/webgis-postgis.yml
 
 HELM_CHART_NAME: webgis-postgis
-HELM_RELEASE_NAME: geodata
+HELM_RELEASE_NAME: geodata-postgis
 
 replicaCount: 1
 image_registry: docker.io
