Issue #7: Initial commit to install and setup MicroK8s (single node) on a Linux server, running Debian/Ubuntu via Ansible.

--- a/02_setup_k8s/playbook.yml
+++ b/02_setup_k8s/playbook.yml
@@ -4,20 +4,5 @@
   gather_facts: false
   connection: local
 
-  tasks:
-    - name: Get Ansible Python
-      debug:
-        msg: "{{ ansible_playbook_python }}"
-
-    - name: Get current date
-      command: date
-      register: current_date
-      changed_when: false
-
-    - name: Print current date
-      debug:
-        msg: "{{ current_date.stdout }}"
-
-    - name: Setup K8S Cluster
-      debug:
-        msg: "This playbook will setup a Kubernetes cluster ..."
+- import_playbook: setup_k8s_playbook.yml
+- import_playbook: setup_k8s_playbook_2.yml
