Updated ACN: - install additional system-package: sshpass. - install additional ansible-galaxy collection: ansible.posix. - added ENV variables: FUTR_HUB_ACN_SSHKEY_PATH and FUTR_HUB_ACN_SSHKEY. - Updated welcome.txt. - Updated ACN_USAGE.md. - main.yml: disabled the import of playbooks for 02_setup_k8s and 03_setup_k8s_platform

--- a/01_setup_acn/ansible/vars/acn.yml
+++ b/01_setup_acn/ansible/vars/acn.yml
@@ -1,5 +1,5 @@
 ---
 # file vars/acn.yml
 
-sys_packages: [ 'curl', 'vim', 'git', 'less', 'iputils-ping']
+sys_packages: [ 'curl', 'vim', 'git', 'less', 'iputils-ping', 'sshpass']
 python_packages: [ 'openshift', 'jmespath', 'docker']
