--- a/02_setup_k8s/setup_k8s_playbook_2.yml
+++ b/02_setup_k8s/setup_k8s_playbook_2.yml
@@ -1,10 +1,9 @@
 ---
 # file: 02_setup_k8s/setup_k8s_playbook_2.yml
 
-- hosts: k8s-master
+- hosts: localhost
   gather_facts: false
-  become: true
-  become_user: acn
+  become: false
 
   vars_files:
     - vars/default.yml
