Issue #7: - 02_setup_k8s/tasks/02_prepare_system.yml: Fixed typos - 02_setup_k8s/tasks/05_cert_manager.yml: Added namespace for task 'Create LE Issuer Prod'

--- a/02_setup_k8s/tasks/02_prepare_system.yml
+++ b/02_setup_k8s/tasks/02_prepare_system.yml
@@ -75,13 +75,13 @@
     interface: vxlan.calico
     direction: out
 
-# Enbale IP Forwaring
+# Enbale IP Forwarding
 - name: Set ip forwarding
   sysctl:
     name: net.ipv4.ip_forward
     value: '1'
     sysctl_set: yes
 
-# Diable Swap
+# Disable Swap
 - name: Disable Swap
   command: swapoff -a
