Issue #7 - Bugfixes/Enhancements - put task 01_user_setup into a separate playbook setup_k8s_playbook_01.yml. - put tasks 02_prepare_system, 03_install_microk8s and 04_save_kubeconfig into a separate playbook setup_k8s_playbook_02.yml. -put task 05_cert_manager into a separate playbook setup_k8s_playbook_03.yml. - updated playbook.yml to reflect those changes. - added variables kubeconfig_file and k8s_ingress_class into inventory. - added UFW rule to set DEFAULT_FORWARD_POLICY="ACCEPT" in /etc/default/ufw in task 02_prepare_system. - added retries (3x) for task 'Start MicroK8s' in task 03_install_microk8s. - added inventory variable kubeconfig_file into task 04_save_kubeconfig. - added task to delete generated kubeconfig-file on remote system. - added retries (10x) for task 'Create LE Issuer Prod'. This should mitigate problems with WebHook. - added inventory variable k8s_ingress_class to task 'Create LE Issuer Prod'.

--- a/02_setup_k8s/setup_k8s_playbook_02.yml
+++ b/02_setup_k8s/setup_k8s_playbook_02.yml
@@ -1,15 +1,13 @@
 ---
-# file: 02_setup_k8s/setup_k8s_playbook.yml
-- hosts: servers
-  gather_facts: false
+# file: 02_setup_k8s/setup_k8s_playbook_02.yml
+- hosts: k8s_cluster
   become: true
+  gather_facts: false
 
   tasks:
     - name: Read default values
       ansible.builtin.include_vars:
         file: default.yml
-
-    - import_tasks: tasks/01_user_setup.yml
 
     - import_tasks: tasks/02_prepare_system.yml
 
