--- a/02_setup_k8s/tasks/04_save_kubeconfig.yml
+++ b/02_setup_k8s/tasks/04_save_kubeconfig.yml
@@ -1,31 +1,31 @@
 ---
 - name: Check if local kubeconfig exists
   ansible.builtin.stat:
-    path: "~/.kube/{{ inventory_hostname }}_config"
+    path: "~/.kube/{{ kubeconfig_file }}"
   delegate_to: localhost
   register: result
   become: no
 
-- name: 'Fail if local {{ inventory_hostname }}_config already exists.'
+- name: 'Fail if local {{ kubeconfig_file }} already exists.'
   fail:
-    msg: "{{ inventory_hostname }}_config already exists locally"
+    msg: "{{ kubeconfig_file }} already exists locally"
   when: result.stat.exists
 
 - name: Generate kubeconfig
-  shell: "source /etc/profile.d/apps-bin-path.sh && /snap/bin/microk8s config >> {{ inventory_hostname }}_config"
+  shell: "source /etc/profile.d/apps-bin-path.sh && /snap/bin/microk8s config >> {{ kubeconfig_file }}"
   args:
     executable: /bin/bash
   when: not result.stat.exists
 
-- name: Fetch {{ inventory_hostname }}_config to local system
+- name: Fetch {{ kubeconfig_file }} to local system
   fetch:
-    src: "{{ inventory_hostname }}_config"
+    src: "{{ kubeconfig_file }}"
     dest: "~/.kube/"
     flat: yes
 
 - name: Change file ownership, group and permissions of kubeconfig-file
   ansible.builtin.file:
-    path: "~/.kube/{{ inventory_hostname }}_config"
+    path: "~/.kube/{{ kubeconfig_file }}"
     owner: acn
     group: acn
     mode: '0600'
@@ -33,7 +33,7 @@
   become: no
   when: not result.stat.exists
 
-- name: Create directore /home/acn/.kube on remote system
+- name: Create directory /home/acn/.kube on remote system
   ansible.builtin.file:
     path: "/home/acn/.kube"
     state: directory
@@ -43,8 +43,13 @@
 
 - name: Copy kubeconfig to /home/acn/.kube on remote system
   ansible.builtin.copy:
-    src: "~/.kube/{{ inventory_hostname }}_config"
-    dest: "/home/acn/.kube/{{ inventory_hostname }}_config"
+    src: "~/.kube/{{ kubeconfig_file }}"
+    dest: "/home/acn/.kube/{{ kubeconfig_file }}"
     owner: acn
     group: acn
     mode: '0600'
+
+- name: Delete generated kubeconfg on remote system
+  ansible.builtin.file:
+    path: "{{ kubeconfig_file }}"
+    state: absent
