Using the kubeconfig that is created, when you install MicroK8s from within the ACN container.

--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -12,6 +12,6 @@ HELM_REPO_URL: http://127.0.0.1
 HELM_REPO_NAME: futr-hub
 
 # Kubernetes
-K8S_KUBECONFIG: ~/.kube/config
+K8S_KUBECONFIG: ~/.kube/k8s-master_config
 K8S_CONTEXT: microk8s
 K8S_NAMESPACE: smart-city-txl
