--- a/03_setup_k8s_platform/files/helmcharts/webgis-postgis/templates/deployment.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-postgis/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
           livenessProbe:
             exec:
               command:
-                - pg_isready -U {{ .Values.env.postgres_user }} -p {{ .Values.service.port }}
+                - /usr/bin/pg_isready -U {{ .Values.env.postgres_user }} -p {{ .Values.service.port }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
