Bugfix/Enhancement: - changed namespace for WebGIS-prototype deployment from 'smart-city-txl' to 'geodata'. - added new namespace for CKAN deployment (Issue #19, #35). - removed values for QGIS Server image from Helm chart, since those values are set by Ansible. - fixed Ansible conditionals in playbooks that require Secret 'gitlab-registry'. - added missing settings 'kubeconfig' and 'context' in Ansible playbooks, so no more installation errors should occur, if env-variable KUBECONFIG is not set.

--- a/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/values.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/values.yaml
@@ -32,12 +32,12 @@ qgis:
   #----------------------------------
   server:
     image:
-      registry: "registry.gitlab.com"
-      repository: "berlintxl/futr-hub/platform/qgis-server-customizing"
-      tag: "webgis-qgisserver"
-      pullPolicy: Always
+      registry: ""
+      repository: ""
+      tag: ""
+      pullPolicy: IfNotPresent
 
-    imagePullSecrets: [{"name": "gitlab-registry"}]
+    imagePullSecrets: []
 
     # Deployment settings
     replicas: 1
