--- a/03_setup_k8s_platform/deploy_webgis_pgadmin_playbook.yml
+++ b/03_setup_k8s_platform/deploy_webgis_pgadmin_playbook.yml
@@ -19,7 +19,7 @@
       ansible.builtin.set_fact:
         k8s_config: "{{ default.K8S_KUBECONFIG }}"
         k8s_context: "{{ default.K8S_CONTEXT }}"
-        k8s_namespace: "{{ default.K8S_NAMESPACE }}"
+        k8s_namespace: "{{ default.K8S_NAMESPACE_GEODATA }}"
 
     - name: Set facts for ChartMuseum
       ansible.builtin.set_fact:
