--- a/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
+++ b/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
@@ -19,7 +19,7 @@
       ansible.builtin.set_fact:
         k8s_config: "{{ default.K8S_KUBECONFIG }}"
         k8s_context: "{{ default.K8S_CONTEXT }}"
-        k8s_namespace: "{{ default.K8S_NAMESPACE }}"
+        k8s_namespace: "{{ default.K8S_NAMESPACE_GEODATA }}"
         kubectl_pid_file: "/tmp/kubectl_pid"
 
     - name: Set facts for ChartMuseum
@@ -50,6 +50,8 @@
         kind: Secret
         name: "gitlab-registry"
         namespace: "{{ k8s_namespace }}"
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
       register: gitlab_registry_secret
 
     - name: Set facts for dockerconfigjson
@@ -60,16 +62,19 @@
         docker_username: "{{ GITLAB_REGISTRY_ACCESS_USER }}"
         docker_password: "{{ GITLAB_REGISTRY_ACCESS_TOKEN }}"
         docker_credentials: "{{ GITLAB_REGISTRY_ACCESS_USER }}:{{ GITLAB_REGISTRY_ACCESS_TOKEN }}"
-      when: not gitlab_registry_secret['resources'][0]['type'] == "kubernetes.io/dockerconfigjson"
+      when: gitlab_registry_secret['resources'][0] is undefined
 
     - name: Create dockerconfigjson
       ansible.builtin.set_fact:
         dockerconfigjson: "{{ lookup('template', 'templates/webgis/gitlab_dockerjson.json.j2') | to_json }}"
-      when: not gitlab_registry_secret['resources'][0]['type'] == "kubernetes.io/dockerconfigjson"
+      when: docker_registry is defined
 
     - name: Create docker-registry secret for GitLab registry
       kubernetes.core.k8s:
         state: present
+        namespace: "{{ k8s_namespace }}"
+        kubeconfig: "{{ k8s_config }}"
+        context: "{{ k8s_context }}"
         definition:
           apiVersion: v1
           kind: secret
@@ -88,7 +93,7 @@
 
     - name: Run kubectl port-forward to PostGIS K8s service
       ansible.builtin.shell: |
-        nohup kubectl --kubeconfig="$HOME/.kube/k8s-master_config" port-forward --namespace smart-city-txl svc/geodata-postgis-webgis-postgis 5432:5432 </dev/null >/dev/null 2>&1 &
+        nohup kubectl --kubeconfig="$HOME/.kube/k8s-master_config" port-forward --namespace {{ k8s_namespace }} svc/geodata-postgis-webgis-postgis 5432:5432 </dev/null >/dev/null 2>&1 &
         echo "$!" >{{ kubectl_pid_file | quote }}
       args:
         executable: /bin/bash
