--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -14,4 +14,5 @@ HELM_REPO_NAME: futr-hub
 # Kubernetes
 K8S_KUBECONFIG: ~/.kube/k8s-master_config
 K8S_CONTEXT: microk8s
-K8S_NAMESPACE: smart-city-txl
+K8S_NAMESPACE_GEODATA: geodata
+K8S_NAMESPACE_CKAN: ckan
