Issue #35: fixed value for ckan_siteUrl

--- a/03_setup_k8s_platform/vars/ckan_ckan.yml
+++ b/03_setup_k8s_platform/vars/ckan_ckan.yml
@@ -38,7 +38,7 @@ ckan_sysadminApiToken: "{{ CKAN_SYSADMIN_APITOKEN }}"
 ckan_sysadminEmail: "olaf.heinemann@omp.de"
 ckan_siteTitle: "Site Title here"
 ckan_siteId: "site-id-here"
-ckan_siteUrl: "http://localhost:5000"
+ckan_siteUrl: "https://ckan.utr-k8s.urban-data.cloud/"
 ckan_ckanPlugins: "envvars image_view text_view recline_view datastore datapusher"
 ckan_storagePath: "/var/lib/ckan/default"
 ckan_activityStreamsEmailNotifications: "false"
