Issue #35: changed value for ckan_sysadminEmail to 'postmaster@domain.com'

--- a/03_setup_k8s_platform/vars/ckan_ckan.yml
+++ b/03_setup_k8s_platform/vars/ckan_ckan.yml
@@ -35,7 +35,7 @@ DatastoreRODBPass: "{{ CKAN_DATASTORE_RWDB_USER_PASSWORD }}"
 ckan_sysadminName: "{{ CKAN_SYSADMIN_NAME }}"
 ckan_sysadminPassword: "{{ CKAN_SYSADMIN_PASSWORD }}"
 ckan_sysadminApiToken: "{{ CKAN_SYSADMIN_APITOKEN }}"
-ckan_sysadminEmail: "olaf.heinemann@omp.de"
+ckan_sysadminEmail: "postmaster@domain.com"
 ckan_siteTitle: "Site Title here"
 ckan_siteId: "site-id-here"
 ckan_siteUrl: "https://ckan.utr-k8s.urban-data.cloud/"
