--- a/03_setup_k8s_platform/vars/ckan_ckan.yml
+++ b/03_setup_k8s_platform/vars/ckan_ckan.yml
@@ -8,7 +8,7 @@ HELM_RELEASE_NAME: ckan
 
 image_registry: "docker.io"
 image_repository: "keitaro/ckan"
-image_tag: "2.9.1"
+image_tag: "2.9.2"
 image_pullPolicy: IfNotPresent
 
 pvc_enabled: true
@@ -36,8 +36,8 @@ ckan_sysadminName: "{{ CKAN_SYSADMIN_NAME }}"
 ckan_sysadminPassword: "{{ CKAN_SYSADMIN_PASSWORD }}"
 ckan_sysadminApiToken: "{{ CKAN_SYSADMIN_APITOKEN }}"
 ckan_sysadminEmail: "postmaster@domain.com"
-ckan_siteTitle: "Site Title here"
-ckan_siteId: "site-id-here"
+ckan_siteTitle: "CKAN for FUTR-HUB"
+ckan_siteId: "futr-hub"
 ckan_siteUrl: "https://ckan.utr-k8s.urban-data.cloud/"
 ckan_ckanPlugins: "envvars image_view text_view recline_view datastore datapusher"
 ckan_storagePath: "/var/lib/ckan/default"
@@ -92,11 +92,16 @@ securityContext: {}
 service_type: ClusterIP
 service_port: 80
 
+# Set to true, if using ingress-nginx
 ingress_enabled: true
 ingress_class: "public"
 ingress_host: "ckan.utr-k8s.urban-data.cloud"
 tls_acme: true
 tls_secretName: "ckan.utr-k8s.urban-data.cloud-tls"
+
+# Set to true, if using Træfik
+ingressRoute_enabled: false
+ingressRoute_host: "ckan.utr-k8s.urban-data.cloud"
 
 datapusher_enabled: true
 datapusher_maxContentLength: "102400000"
