--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -12,7 +12,7 @@ HELM_REPO_URL: http://127.0.0.1
 HELM_REPO_NAME: futr-hub
 
 # Kubernetes
-K8S_KUBECONFIG: ~/.kube/k8s-master_config
+K8S_KUBECONFIG: "{{ lookup('env', 'HOME') }}/.kube/k8s-master_config"
 K8S_CONTEXT: microk8s
 K8S_NAMESPACE_GEODATA: geodata
 K8S_NAMESPACE_CKAN: ckan
