--- a/03_setup_k8s_platform/update_qgis_project_playbook.yml
+++ b/03_setup_k8s_platform/update_qgis_project_playbook.yml
@@ -1,7 +1,7 @@
 ---
 # file: 03_setup_k8s_platform/update_qgis_project_playbook.yml
 
-- name: Deploy QGIS Server for WebGIS
+- name: Update QGIS Server project file
   hosts: localhost
   gather_facts: false
 
