--- a/03_setup_k8s_platform/deploy_minio_operator_playbook.yml
+++ b/03_setup_k8s_platform/deploy_minio_operator_playbook.yml
@@ -1,6 +1,5 @@
 ---
-# file: 03_setup_k8s_platform/deploy_data_management_playbook.yml
-- name: Deploy CKAN
+- name: Deploy minio operator
   hosts: localhost
   gather_facts: false
 
@@ -82,9 +81,9 @@
             name: op-minio-console
             namespace: "{{ k8s_namespace }}"
             annotations:
-              nginx.ingress.kubernetes.io/auth-url: "https://oauth.{{ default.GENERAL_DOMAIN_NAME }}/oauth2/auth"
-              nginx.ingress.kubernetes.io/auth-signin: "https://oauth.{{ default.GENERAL_DOMAIN_NAME }}/oauth2/start?rd=https://$host$request_uri"
-              nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email
+#              nginx.ingress.kubernetes.io/auth-url: "https://oauth.{{ default.GENERAL_DOMAIN_NAME }}/oauth2/auth"
+#              nginx.ingress.kubernetes.io/auth-signin: "https://oauth.{{ default.GENERAL_DOMAIN_NAME }}/oauth2/start?rd=https://$host$request_uri"
+#              nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email
               kubernetes.io/ingress.class: "{{ default.K8S_INGRESS_CLASS }}"
               kubernetes.io/tls-acme: "true"
               nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
