--- a/03_setup_k8s_platform/deploy_minio_tenant_playbook.yml
+++ b/03_setup_k8s_platform/deploy_minio_tenant_playbook.yml
@@ -119,6 +119,7 @@
                   metadata:
                     name: data
                   spec:
+                    storageClassName: minio-storage
                     accessModes:
                       - ReadWriteOnce
                     resources:
