--- a/03_setup_k8s_platform/vars/ckan_ckan.yml
+++ b/03_setup_k8s_platform/vars/ckan_ckan.yml
@@ -38,7 +38,7 @@ ckan_sysadminApiToken: "{{ CKAN_SYSADMIN_APITOKEN }}"
 ckan_sysadminEmail: "postmaster@domain.com"
 ckan_siteTitle: "CKAN for FUTR-HUB"
 ckan_siteId: "futr-hub"
-ckan_siteUrl: "https://ckan.utr-k8s.urban-data.cloud/"
+ckan_siteUrl: "https://ckan.{{ DOMAIN }}"
 ckan_ckanPlugins: "envvars image_view text_view recline_view datastore datapusher"
 ckan_storagePath: "/var/lib/ckan/default"
 ckan_activityStreamsEmailNotifications: "false"
@@ -95,13 +95,13 @@ service_port: 80
 # Set to true, if using ingress-nginx
 ingress_enabled: true
 ingress_class: "public"
-ingress_host: "ckan.utr-k8s.urban-data.cloud"
+ingress_host: "ckan.{{ DOMAIN }}"
 tls_acme: true
-tls_secretName: "ckan.utr-k8s.urban-data.cloud-tls"
+tls_secretName: "ckan.{{ DOMAIN }}-tls"
 
 # Set to true, if using Træfik
 ingressRoute_enabled: false
-ingressRoute_host: "ckan.utr-k8s.urban-data.cloud"
+ingressRoute_host: "ckan.u{{ DOMAIN }}"
 
 datapusher_enabled: true
 datapusher_maxContentLength: "102400000"
