Issue #69: Initial commit to deploy FROST-Server via Helm chart.

--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -16,6 +16,8 @@ K8S_KUBECONFIG: "{{ lookup('env', 'HOME') }}/.kube/k8s-master_config"
 K8S_CONTEXT: microk8s
 K8S_NAMESPACE_GEODATA: geodata
 K8S_NAMESPACE_CKAN: ckan
+K8S_NAMESPACE_FROST: frost-server
+K8S_NAMESPACE_DATA_MANAGEMENT_OPERATOR: data-management
 
 # GitLab-API-URL
 GITLAB_API_URL: "https://gitlab.com/api/v4"
