Initial Monitoring Configuration

--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -19,6 +19,8 @@ K8S_NAMESPACE_CKAN: ckan
 K8S_NAMESPACE_POSTGRES_OPERATOR: op-postgres
 K8S_NAMESPACE_MINIO_OPERATOR: op-minio
 K8S_NAMESPACE_DATA_MANAGEMENT_OPERATOR: data-management
+K8S_NAMESPACE_PUBLIC: public
+K8S_NAMESPACE_MONITORING: monitoring
 K8S_INGRESS_CLASS: public
 
 # GitLab-API-URL
