Correct namespace name

--- a/03_setup_k8s_platform/vars/default.yml
+++ b/03_setup_k8s_platform/vars/default.yml
@@ -20,7 +20,7 @@ K8S_NAMESPACE_POSTGRES_OPERATOR: op-postgres
 K8S_NAMESPACE_MINIO_OPERATOR: op-minio
 K8S_NAMESPACE_DATA_MANAGEMENT_OPERATOR: data-management
 K8S_NAMESPACE_PUBLIC: public
-K8S_NAMESPACE_MONITORING: monitoring_logging
+K8S_NAMESPACE_MONITORING: monitoring-logging
 K8S_INGRESS_CLASS: public
 
 # GitLab-API-URL
